--- a/CSS_Layout.css
+++ b/CSS_Layout.css
@@ -295,7 +295,7 @@ pre .strongGreen{
   text-decoration: none !important;
   border: 0;
   border-radius: 0;
-  background-color: transparent;
+  background-color: #0B2A4A;
 }
 
 .bannerHeader .nav .nav-item .nav-link:hover {
@@ -1025,5 +1025,6 @@ pre .strongGreen{
     border: 1px solid var(--grayScale-300);
     border-radius: 50px;
   }
+
 
 }
