--- a/CSS_Layout.css
+++ b/CSS_Layout.css
@@ -295,7 +295,7 @@ pre .strongGreen{
   text-decoration: none !important;
   border: 0;
   border-radius: 0;
-  background-color: #0B2A4A;
+  background-color: transparent;
 }
 
 .bannerHeader .nav .nav-item .nav-link:hover {
@@ -307,7 +307,7 @@ pre .strongGreen{
 }
 
 .bannerHeader .nav .nav-item .nav-link.active {
-  background-color: rgba(255, 255, 255, .2) !important;
+  background-color: #0B2A4A !important;
 }
 
 /* ------------------- Submenú */
@@ -1028,3 +1028,4 @@ pre .strongGreen{
 
 
 }
+
