--- a/CSS_Propiedades.css
+++ b/CSS_Propiedades.css
@@ -7,12 +7,12 @@
   --brandColor-03: #DD8555;
 
   /* ============ Escala de grises */
-  --grayScale-050: #7A97AB;
-  --grayScale-100: #7A97AB;
-  --grayScale-200: #7A97AB;
-  --grayScale-300: #7A97AB;
-  --grayScale-400: #7A97AB;
-  --grayScale-800: #7A97AB;
+  --grayScale-050: #D9D8D6;
+  --grayScale-100: #D9D8D6;
+  --grayScale-200: #D9D8D6;
+  --grayScale-300: #D9D8D6;
+  --grayScale-400: #D9D8D6;
+  --grayScale-800: #D9D8D6;
 
   /* ============ Estilos generales */
   --bnrIntroHeight: 200px;
@@ -27,3 +27,4 @@
   --prg_bachsep:: #0B2A4A;
 
 }
+
