--- a/CSS_Layout.css
+++ b/CSS_Layout.css
@@ -295,7 +295,7 @@ pre .strongGreen{
   text-decoration: none !important;
   border: 0;
   border-radius: 0;
-  background-color: transparent;
+  background-color: #0B2A4A;
 }
 
 .bannerHeader .nav .nav-item .nav-link:hover {
@@ -590,7 +590,7 @@ pre .strongGreen{
 
   .bannerHeader .nav .nav-item .nav-link:hover,
   .bannerHeader .nav .nav-item .nav-link.active {
-    color: #0B2A4A;
+    color: #fff;
     background-color: var(--emphasisColor) !important;
   }
 
@@ -1028,5 +1028,6 @@ pre .strongGreen{
 
 
 }
+
 
 
