--- a/CSS_Layout.css
+++ b/CSS_Layout.css
@@ -295,7 +295,7 @@ pre .strongGreen{
   text-decoration: none !important;
   border: 0;
   border-radius: 0;
-  background-color: #0B2A4A;
+  background-color: transparent;
 }
 
 .bannerHeader .nav .nav-item .nav-link:hover {
@@ -590,8 +590,8 @@ pre .strongGreen{
 
   .bannerHeader .nav .nav-item .nav-link:hover,
   .bannerHeader .nav .nav-item .nav-link.active {
-    color: #fff;
-    background-color: var(--emphasisColor) !important;
+    color: #0B2A4A;
+    /* background-color: var(--emphasisColor) !important; */
   }
 
   /* -------- Submenú unidad  */
@@ -1028,6 +1028,7 @@ pre .strongGreen{
 
 
 }
+
 
 
 
