--- a/CSS_Propiedades.css
+++ b/CSS_Propiedades.css
@@ -11,7 +11,7 @@
   --grayScale-100: #D9D8D6;
   --grayScale-200: #D9D8D6;
   --grayScale-300: #D9D8D6;
-  --grayScale-400: #D9D8D6;
+  --grayScale-400: #0B2A4A;
   --grayScale-800: #0B2A4A;
 
   /* ============ Estilos generales */
@@ -27,5 +27,6 @@
   --prg_bachsep:: #0B2A4A;
 
 }
+
 
 
