--- a/CSS_Layout.css
+++ b/CSS_Layout.css
@@ -299,7 +299,7 @@ pre .strongGreen{
 }
 
 .bannerHeader .nav .nav-item .nav-link:hover {
-  background-color: rgba(255, 255, 255, .1);
+  background-color: #0B2A4A;
 }
 
 .bannerHeader .nav .nav-item .nav-link:focus {
@@ -1027,6 +1027,7 @@ pre .strongGreen{
 
 
 }
+
 
 
 
