--- a/CSS_Propiedades.css
+++ b/CSS_Propiedades.css
@@ -9,8 +9,8 @@
   /* ============ Escala de grises */
   --grayScale-050: #D9D8D6;
   --grayScale-100: #D9D8D6;
-  --grayScale-200: #D9D8D6;
-  --grayScale-300: #D9D8D6;
+  --grayScale-200: #0B2A4A;
+  --grayScale-300: #0B2A4A;
   --grayScale-400: #0B2A4A;
   --grayScale-800: #0B2A4A;
 
@@ -27,6 +27,7 @@
   --prg_bachsep:: #0B2A4A;
 
 }
+
 
 
 
